# exif_mcp_server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: CLIENTS.md  OPEN-SOURCE-GUIDE.md  TOOL-CONTRACTS.md
examples/client_configs/: claude-code.md  cursor-mcp.json  inspector.md  vscode-mcp.json
examples/sample_images/: README.md  tiff-exif.tiff
src/exif_mcp_server/: __init__.py  server.py
src/exif_mcp_server/core/: __init__.py  errors.py  exif_cleaner.py  exif_reader.py  filetypes.py  models.py
src/exif_mcp_server/prompts/: __init__.py  exif_prompts.py
src/exif_mcp_server/resources/: __init__.py  privacy_guide.py
src/exif_mcp_server/tools/: __init__.py  _errors.py  batch.py  clean.py  inspect.py  privacy.py
tests/: __init__.py  conftest.py  error_helpers.py  test_batch.py  test_clean.py  test_field_workflows.py  test_gps_workflows.py  test_inspect.py  test_privacy.py  test_sample_images.py  test_server.py  test_tool_errors.py
