[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exif-mcp-server"
version = "0.1.0"
description = "Local-first MCP server scaffold for EXIF inspection and cleanup."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Lu Li" },
]
dependencies = [
  "mcp>=1.0.0",
  "Pillow>=10.0.0",
  "piexif>=1.1.3",
  "typing_extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0",
]

[project.scripts]
exif-mcp-server = "exif_mcp_server.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["piexif", "mcp.*"]
ignore_missing_imports = true
